--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3418,6 +3418,234 @@ select {
   background-color: white;
 }
 
+.text-light-gray {
+  color: #ededed;
+}
+
+.text-hover-light-gray:hover {
+  color: #ededed;
+}
+
+.bg-light-gray {
+  background-color: #ededed;
+}
+
+.text-light-gray-light-1 {
+  color: #efefef;
+}
+
+.text-hover-light-gray-light-1:hover {
+  color: #efefef;
+}
+
+.bg-light-gray-light-1 {
+  background-color: #efefef;
+}
+
+.text-light-gray-light-2 {
+  color: #f1f1f1;
+}
+
+.text-hover-light-gray-light-2:hover {
+  color: #f1f1f1;
+}
+
+.bg-light-gray-light-2 {
+  background-color: #f1f1f1;
+}
+
+.text-light-gray-light-3 {
+  color: #f2f2f2;
+}
+
+.text-hover-light-gray-light-3:hover {
+  color: #f2f2f2;
+}
+
+.bg-light-gray-light-3 {
+  background-color: #f2f2f2;
+}
+
+.text-light-gray-light-4 {
+  color: #f4f4f4;
+}
+
+.text-hover-light-gray-light-4:hover {
+  color: #f4f4f4;
+}
+
+.bg-light-gray-light-4 {
+  background-color: #f4f4f4;
+}
+
+.text-light-gray-light-5 {
+  color: #f6f6f6;
+}
+
+.text-hover-light-gray-light-5:hover {
+  color: #f6f6f6;
+}
+
+.bg-light-gray-light-5 {
+  background-color: #f6f6f6;
+}
+
+.text-light-gray-light-6 {
+  color: #f8f8f8;
+}
+
+.text-hover-light-gray-light-6:hover {
+  color: #f8f8f8;
+}
+
+.bg-light-gray-light-6 {
+  background-color: #f8f8f8;
+}
+
+.text-light-gray-light-7 {
+  color: #fafafa;
+}
+
+.text-hover-light-gray-light-7:hover {
+  color: #fafafa;
+}
+
+.bg-light-gray-light-7 {
+  background-color: #fafafa;
+}
+
+.text-light-gray-light-8 {
+  color: #fbfbfb;
+}
+
+.text-hover-light-gray-light-8:hover {
+  color: #fbfbfb;
+}
+
+.bg-light-gray-light-8 {
+  background-color: #fbfbfb;
+}
+
+.text-light-gray-light-9 {
+  color: #fdfdfd;
+}
+
+.text-hover-light-gray-light-9:hover {
+  color: #fdfdfd;
+}
+
+.bg-light-gray-light-9 {
+  background-color: #fdfdfd;
+}
+
+.text-light-gray-dark-1 {
+  color: #d5d5d5;
+}
+
+.text-hover-light-gray-dark-1:hover {
+  color: #d5d5d5;
+}
+
+.bg-light-gray-dark-1 {
+  background-color: #d5d5d5;
+}
+
+.text-light-gray-dark-2 {
+  color: #bebebe;
+}
+
+.text-hover-light-gray-dark-2:hover {
+  color: #bebebe;
+}
+
+.bg-light-gray-dark-2 {
+  background-color: #bebebe;
+}
+
+.text-light-gray-dark-3 {
+  color: #a6a6a6;
+}
+
+.text-hover-light-gray-dark-3:hover {
+  color: #a6a6a6;
+}
+
+.bg-light-gray-dark-3 {
+  background-color: #a6a6a6;
+}
+
+.text-light-gray-dark-4 {
+  color: #8e8e8e;
+}
+
+.text-hover-light-gray-dark-4:hover {
+  color: #8e8e8e;
+}
+
+.bg-light-gray-dark-4 {
+  background-color: #8e8e8e;
+}
+
+.text-light-gray-dark-5 {
+  color: #777777;
+}
+
+.text-hover-light-gray-dark-5:hover {
+  color: #777777;
+}
+
+.bg-light-gray-dark-5 {
+  background-color: #777777;
+}
+
+.text-light-gray-dark-6 {
+  color: #5f5f5f;
+}
+
+.text-hover-light-gray-dark-6:hover {
+  color: #5f5f5f;
+}
+
+.bg-light-gray-dark-6 {
+  background-color: #5f5f5f;
+}
+
+.text-light-gray-dark-7 {
+  color: #474747;
+}
+
+.text-hover-light-gray-dark-7:hover {
+  color: #474747;
+}
+
+.bg-light-gray-dark-7 {
+  background-color: #474747;
+}
+
+.text-light-gray-dark-8 {
+  color: #2f2f2f;
+}
+
+.text-hover-light-gray-dark-8:hover {
+  color: #2f2f2f;
+}
+
+.bg-light-gray-dark-8 {
+  background-color: #2f2f2f;
+}
+
+.text-light-gray-dark-9 {
+  color: #181818;
+}
+
+.text-hover-light-gray-dark-9:hover {
+  color: #181818;
+}
+
+.bg-light-gray-dark-9 {
+  background-color: #181818;
+}
+
 .site-nav {
   display: flex;
   justify-content: space-between;
