--- a/resources/sass/components/breadcrumbs.scss
+++ b/resources/sass/components/breadcrumbs.scss
@@ -17,3 +17,23 @@
         }
     }
 }
+.Action {
+    position: fixed;
+    background-color:#333;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    height: 63px;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-line-pack: end;
+    align-content: flex-end;
+    padding-left: 30px;
+    padding-right: 30px;
+    z-index: 9999;
+}
