--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,7 +16,6 @@
 @import 'components/select';
 @import 'components/search';
 @import 'components/footer';
-
+@import 'components/modal';
 @import 'resources';
-@import 'modal';
 @import 'menus/laluce_drinks';
