--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3764,9 +3764,11 @@ select {
 
 .modal-backdrop {
   position: fixed;
-  top: 50%;
-  left: 50%;
-  background-color: red;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.3);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -3790,7 +3792,7 @@ select {
 .modal-header {
   position: relative;
   border-bottom: 1px solid #eeeeee;
-  color: #4AAE9B;
+  color: black;
   justify-content: space-between;
 }
 
@@ -3814,8 +3816,12 @@ select {
   padding: 10px;
   cursor: pointer;
   font-weight: bold;
-  color: #4AAE9B;
+  color: black;
   background: transparent;
+}
+
+.choose-table .modal-backdrop {
+  margin: 0 auto;
 }
 
 .bordered {
