--- a/resources/sass/components/modal.scss
+++ b/resources/sass/components/modal.scss
@@ -1,12 +1,14 @@
 .modal-backdrop {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    background-color: rgba(255, 0, 0, 1.0);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
   }
 
   .modal {
@@ -26,7 +28,7 @@
   .modal-header {
     position: relative;
     border-bottom: 1px solid #eeeeee;
-    color: #4AAE9B;
+    color: black;
     justify-content: space-between;
   }
 
@@ -50,6 +52,12 @@
     padding: 10px;
     cursor: pointer;
     font-weight: bold;
-    color: #4AAE9B;
+    color: black;
     background: transparent;
+  }
+
+  .choose-table{
+    .modal-backdrop {
+      margin:0 auto;
+    }
   }
