Fix modal, template-image component

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,9 +6,11 @@
 @import 'base';
 @import 'breakpoints';
 @import 'grid';
+@import "forms";
 
 // colors
 @import "colors";
+
 
 //components
 @import 'components/nav';
