--- a/public/css/app.css
+++ b/public/css/app.css
@@ -413,20 +413,6 @@ main.page-main {
   text-transform: uppercase;
 }
 
-select {
-  background: #f8f8f8 !important;
-  margin-top: 8px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  font-family: "FFDINWebProLight", sans-serif;
-  padding: 0 12px 3px !important;
-  font-size: 12px;
-  border-radius: 0 !important;
-  border: 1px solid #979797 !important;
-  height: 41px !important;
-}
-
 .hidden {
   display: none;
 }
@@ -886,6 +872,25 @@ select {
     width: 100%;
   }
 }
+.form-control:not(select) {
+  margin-top: 8px;
+  color: #000;
+  font-size: 12px;
+  padding: 10px 10px 10px 10px;
+  border-radius: 5px;
+  border: 1px solid #4a4a4a;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.edit-modal .control-label {
+  text-align: left;
+}
+
 .text-primary {
   color: #CC6600;
 }
@@ -3699,9 +3704,20 @@ select {
   display: block;
 }
 
-.form-control {
+#menu-type .form-control,
+#choose-modal .form-control {
   margin-bottom: 2rem;
   width: 15rem;
+}
+
+select {
+  background: #f8f8f8;
+  margin-top: 8px;
+  padding: 0 12px 3px;
+  font-size: 12px;
+  border-radius: 0;
+  border: 1px solid #979797;
+  height: 41px;
 }
 
 /* search */
